--- a/Mock_example/Erroneous_code_manuscript.tex
+++ b/Mock_example/Erroneous_code_manuscript.tex
@@ -155,7 +155,7 @@
     {}{\InnerPatchFailed}%
   }
 {}{\PatchFailed}
-\keywords{learning, R, statistical programming, error-full learning\newline\indent Word count: 1200}
+\keywords{learning, R, statistical programming, error-full learning\newline\indent Word count: 1018}
 \usepackage{lineno}
 
 \linenumbers
@@ -167,14 +167,14 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={The effect of erroneous R code on student performance},
+  pdftitle={The effect of erroneous R code on developing data skills},
   pdfauthor={James Bartlett1},
   pdflang={en-EN},
   pdfkeywords={learning, R, statistical programming, error-full learning},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
-\title{The effect of erroneous R code on student performance}
+\title{The effect of erroneous R code on developing data skills}
 \author{James Bartlett\textsuperscript{1}}
 \date{}
 
@@ -302,7 +302,7 @@ In conclusion, a lecture format that covers both data wrangling and debugging sk
 \hypertarget{disclosures}{%
 \section{Disclosures}\label{disclosures}}
 
-We used R (Version 4.1.3; R Core Team, 2022) and the R-packages \emph{dplyr} (Version 1.0.10; Wickham, François, et al., 2022), \emph{forcats} (Version 0.5.1; Wickham, 2021), \emph{ggplot2} (Version 3.3.6; Wickham, 2016), \emph{papaja} (Version 0.1.1; Aust \& Barth, 2022), \emph{purrr} (Version 0.3.4; Henry \& Wickham, 2020), \emph{pwr} (Version 1.3.0; Champely, 2020), \emph{readr} (Version 2.1.2; Wickham, Hester, et al., 2022), \emph{shiny} (Version 1.7.3; Chang et al., 2022), \emph{stringr} (Version 1.4.1; Wickham, 2022), \emph{tibble} (Version 3.1.8; Müller \& Wickham, 2022), \emph{tidyr} (Version 1.2.0; Wickham \& Girlich, 2022), \emph{tidyverse} (Version 1.3.2; Wickham et al., 2019), and \emph{tinylabels} (Version 0.2.3; Barth, 2022) for all our analyses.
+We used R (Version 4.1.3; R Core Team, 2022) and the R-packages \emph{dplyr} (Version 1.0.10; Wickham, François, et al., 2022), \emph{ggplot2} (Version 3.3.6; Wickham, 2016), \emph{papaja} (Version 0.1.1; Aust \& Barth, 2022), \emph{pwr} (Version 1.3.0; Champely, 2020), \emph{readr} (Version 2.1.2; Wickham, Hester, et al., 2022), and \emph{tinylabels} (Version 0.2.3; Barth, 2022) for all our analyses.
 
 \newpage
 
@@ -323,20 +323,11 @@ Bebermeier, S., \& Hagemann, A. (2019). Creating {Statistics} {Exercises} on the
 \leavevmode\vadjust pre{\hypertarget{ref-R-pwr}{}}%
 Champely, S. (2020). \emph{Pwr: Basic functions for power analysis}. \url{https://CRAN.R-project.org/package=pwr}
 
-\leavevmode\vadjust pre{\hypertarget{ref-R-shiny}{}}%
-Chang, W., Cheng, J., Allaire, J., Sievert, C., Schloerke, B., Xie, Y., Allen, J., McPherson, J., Dipert, A., \& Borges, B. (2022). \emph{Shiny: Web application framework for r}. \url{https://CRAN.R-project.org/package=shiny}
-
-\leavevmode\vadjust pre{\hypertarget{ref-R-purrr}{}}%
-Henry, L., \& Wickham, H. (2020). \emph{Purrr: Functional programming tools}. \url{https://CRAN.R-project.org/package=purrr}
-
 \leavevmode\vadjust pre{\hypertarget{ref-hoffman_students_2021}{}}%
 Hoffman, H. J., \& Elmi, A. F. (2021). Do {Students} {Learn} {More} from {Erroneous} {Code}? {Exploring} {Student} {Performance} and {Satisfaction} in an {Error}-{Free} {Versus} an {Error}-full {SAS}® {Programming} {Environment}. \emph{Journal of Statistics and Data Science Education}, \emph{0}(0), 1--13. \url{https://doi.org/10.1080/26939169.2021.1967229}
 
 \leavevmode\vadjust pre{\hypertarget{ref-mcaleer_embedding_2022}{}}%
 McAleer, P., Stack, N., Woods, H., DeBruine, L., Paterson, H., Nordmann, E., Kuepper-Tetzel, C. E., \& Barr, D. J. (2022). \emph{Embedding {Data} {Skills} in {Research} {Methods} {Education}: {Preparing} {Students} for {Reproducible} {Research}}. PsyArXiv. \url{https://doi.org/10.31234/osf.io/hq68s}
-
-\leavevmode\vadjust pre{\hypertarget{ref-R-tibble}{}}%
-Müller, K., \& Wickham, H. (2022). \emph{Tibble: Simple data frames}. \url{https://CRAN.R-project.org/package=tibble}
 
 \leavevmode\vadjust pre{\hypertarget{ref-R-base}{}}%
 R Core Team. (2022). \emph{R: A language and environment for statistical computing}. R Foundation for Statistical Computing. \url{https://www.R-project.org/}
@@ -350,20 +341,8 @@ TARG Meta-Research Group. (2022). Statistics {Education} in {Undergraduate} {Psy
 \leavevmode\vadjust pre{\hypertarget{ref-R-ggplot2}{}}%
 Wickham, H. (2016). \emph{ggplot2: Elegant graphics for data analysis}. Springer-Verlag New York. \url{https://ggplot2.tidyverse.org}
 
-\leavevmode\vadjust pre{\hypertarget{ref-R-forcats}{}}%
-Wickham, H. (2021). \emph{Forcats: Tools for working with categorical variables (factors)}. \url{https://CRAN.R-project.org/package=forcats}
-
-\leavevmode\vadjust pre{\hypertarget{ref-R-stringr}{}}%
-Wickham, H. (2022). \emph{Stringr: Simple, consistent wrappers for common string operations}. \url{https://CRAN.R-project.org/package=stringr}
-
-\leavevmode\vadjust pre{\hypertarget{ref-R-tidyverse}{}}%
-Wickham, H., Averick, M., Bryan, J., Chang, W., McGowan, L. D., François, R., Grolemund, G., Hayes, A., Henry, L., Hester, J., Kuhn, M., Pedersen, T. L., Miller, E., Bache, S. M., Müller, K., Ooms, J., Robinson, D., Seidel, D. P., Spinu, V., \ldots{} Yutani, H. (2019). Welcome to the {tidyverse}. \emph{Journal of Open Source Software}, \emph{4}(43), 1686. \url{https://doi.org/10.21105/joss.01686}
-
 \leavevmode\vadjust pre{\hypertarget{ref-R-dplyr}{}}%
 Wickham, H., François, R., Henry, L., \& Müller, K. (2022). \emph{Dplyr: A grammar of data manipulation}. \url{https://CRAN.R-project.org/package=dplyr}
-
-\leavevmode\vadjust pre{\hypertarget{ref-R-tidyr}{}}%
-Wickham, H., \& Girlich, M. (2022). \emph{Tidyr: Tidy messy data}. \url{https://CRAN.R-project.org/package=tidyr}
 
 \leavevmode\vadjust pre{\hypertarget{ref-R-readr}{}}%
 Wickham, H., Hester, J., \& Bryan, J. (2022). \emph{Readr: Read rectangular text data}. \url{https://CRAN.R-project.org/package=readr}
