--- a/Mock_example/Erroneous_code_manuscript.tex
+++ b/Mock_example/Erroneous_code_manuscript.tex
@@ -168,14 +168,14 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={The effect of erroneous R code on developing data skills},
-  pdfauthor={James Bartlett1},
+  pdfauthor={James Bartlett*},
   pdflang={en-EN},
   pdfkeywords={learning, R, statistical programming, error-full learning},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
 \title{The effect of erroneous R code on developing data skills}
-\author{James Bartlett\textsuperscript{1}}
+\author{James Bartlett\textsuperscript{*}}
 \date{}
 
 
@@ -191,7 +191,7 @@ Correspondence concerning this article should be addressed to James Bartlett, 62
 
 }
 
-\affiliation{\vspace{0.5cm}\textsuperscript{1} University of Glasgow, United Kingdom}
+\affiliation{\vspace{0.5cm}\textsuperscript{*} University of Glasgow, United Kingdom}
 
 \abstract{%
 Teaching statistical programming languages like R are key for adopting reproducible data preparation and analysis workflows. However, teaching data skills provides unique challenges such as preparing students to debug coding errors.
