--- a/Mock_example/Erroneous_code_manuscript.tex
+++ b/Mock_example/Erroneous_code_manuscript.tex
@@ -168,14 +168,14 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={The effect of erroneous R code on developing data skills},
-  pdfauthor={James Bartlett*},
+  pdfauthor={James Bartlett1},
   pdflang={en-EN},
   pdfkeywords={learning, R, statistical programming, error-full learning},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
 \title{The effect of erroneous R code on developing data skills}
-\author{James Bartlett\textsuperscript{*}}
+\author{James Bartlett\textsuperscript{1}}
 \date{}
 
 
@@ -191,14 +191,14 @@ Correspondence concerning this article should be addressed to James Bartlett, 62
 
 }
 
-\affiliation{\vspace{0.5cm}\textsuperscript{*} University of Glasgow, United Kingdom}
+\affiliation{\vspace{0.5cm}\textsuperscript{1} University of Glasgow, United Kingdom}
 
 \abstract{%
 Teaching statistical programming languages like R are key for adopting reproducible data preparation and analysis workflows. However, teaching data skills provides unique challenges such as preparing students to debug coding errors.
 
 We randomly allocated students to complete an error-free (n = 145) or error-full (n = 130) version of a lecture, to investigate if teaching debugging skills improves students performance on a data skills assignment.
 
-Students in the error-full lecture performed significantly better on the data skills assignment than students in the error-free lecture, with a mean improvement of 4.94\%, 95\% CI {[}2.40, 7.49{]}.
+Students in the error-full lecture performed significantly better on the data skills assignment than students in the error-free lecture, \(\Delta M = -4.94\), 95\% CI \([-7.49, -2.40]\).
 
 Adopting a lecture format that covers both data wrangling and debugging skills has the potential to improve student's understanding of reproducible data preparation and analysis.
 }
@@ -279,6 +279,8 @@ Error-Full & 54.88 & 10.42 & 24.13 & 92.22\\
 \end{center}
 
 \end{table}
+
+
 
 We present the descriptive statistics in Table \ref{tab:descriptives-table} and visually in Figure \ref{fig:violin-plot}. Consistent with our hypothesis, participants in the error-full group scored higher than participants in the error-free group.
 
